# ExampleProjects

./: .gitmodules
ray-trace/my/: README.md
ray-trace/my/ray_trace/: Cargo.toml  README.md
ray-trace/my/ray_trace/src/: main.rs
ray-trace/my/ray_trace/src/common/: color.rs  mod.rs  ray.rs  utils.rs  vec3.rs
ray-trace/my/ray_trace/src/geometry/: aabb.rs  bvh.rs  hit.rs  list.rs  mod.rs  sphere.rs  world.rs
ray-trace/my/ray_trace/src/material/: lambertian.rs  mod.rs
ray-trace/my/ray_trace/src/render/: camera.rs  color.rs  mod.rs  painter.rs  ppm_image.rs  take_photo_settings.rs  take_photo_settins.rs
ray-trace/my/ray_trace/src/texture/: mod.rs
