[package]
name = "ray_trace"
version = "0.1.0"
authors = ["hongfendong <hongfendong@tencent.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7"
log = "0.4"
rand = "0.7"
rayon = "1.3"
num_cpus = "1.13"